# appt-scheduler-ts-rust

./: .gitignore  package-lock.json  package.json
API/: .gitignore  Cargo.toml  Shuttle.toml
API/migrations/: 20230131210244_schema.sql
API/src/: lib.rs  router.rs
src/: App.tsx  index.css
src/components/: Layout.tsx
src/pages/appointments/: Create.tsx
