[package]
name = "appt-scheduler-react-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
axum = "0.6.4"
axum-extra = { version = "0.4.2", features = ["spa"] }
axum-macros = "0.3.2"
hyper = "0.14.23"
serde = { version = "1.0.152", features = ["serde_derive"] }
shuttle-secrets = "0.9.0"
shuttle-service = { version = "0.9.0" }
shuttle-shared-db = { version = "0.9.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.6.2", features = ["postgres", "offline", "runtime-tokio-native-tls"] }
teloxide = "0.12.0"
tokio = "1.22.0"
